--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./fonts.css">
+    <link rel="stylesheet" href="./normalize.css">
     <link rel="stylesheet" href="./main.css">
     <title>LOCO</title>
 </head>
@@ -12,7 +13,7 @@
 <header class="header">
     <div class="header__logo-wrap">
         <a class="header__logo-link" href="#">
-                <img src="#" alt="logo">
+              <img src="images/logo.svg">
         </a>
         <div class="header__lang">
             <a class="header__lang-ru">RU</a>
@@ -38,8 +39,8 @@
                     магазинах до 18.09.2018. Для получения скидки в магазинах предъявите скриншот данного предложения. В
                     магазинах предложение не суммируется с другими акциями, предложениями и распродажей.</p>
                 <div class="promo__buttons">
-                    <a class="promo__link" href="#">Читать дальше</a>
-                    <a class="promo__link" href="#">Другие предложения</a>
+                    <a class="promo__link button" href="#">Читать дальше</a>
+                    <a class="promo__link link" href="#">Другие предложения</a>
                 </div>
             </div>
             <div class="promo__social-mob"></div>
@@ -47,20 +48,20 @@
 
         <div class="promo__social">
             <div class="promo__social-content">
-                <ul class="promo__social-list">
+                <ul class="promo__social-list social">
                     <li class="social__item">
                         <a class="social__link" href="#">
-                            <img class="social__link-instagram" src="#" alt="Instagram">
+                            <img class="social__link-instagram" src="images/inst.svg" alt="instagram">
                         </a>
                     </li>
                     <li class="social__item">
                         <a class="social__link" href="#">
-                            <img class="social__link-vkontakte" src="#" alt=" V Kontakte">
+                            <img class="social__link-vkontakte" src="images/vk.svg" alt="vk">
                         </a>
                     </li>
                     <li class="social__item">
                         <a class="social__link" href="#">
-                            <img class="social__link-facebook" src="#" alt="Facebook">
+                            <img class="social__link-facebook" src="images/fb.svg" alt="facebook">
                         </a>
                     </li>
                 </ul>
@@ -73,8 +74,8 @@
     <section class="product">
         <div class="product__wrap">
             <div class="product__wrap-img">
-                <img class="product__img product__img_grey" src="#" alt="grey bag">
-                <img class="product__img product__img_pink" src="#" alt="pink bag">
+                <img class="product__img product__img_grey" src="images/grey-bag.png" alt="grey bag">
+                <img class="product__img product__img_pink" src="images/pink-bag.png" alt="pink bag">
             </div>
             <div class="product__wrap-text">
                 <div class="product__container">
@@ -105,7 +106,7 @@
                     </div>
                 </div>
                 <div class="product__link">
-                    <a class="product__link-others link " href="#" title="Посмотреть другие предложения">ДРУГИЕ ТОВАРЫ
+                    <a class="product__link-others link" href="#" title="Посмотреть другие предложения">ДРУГИЕ ТОВАРЫ
                         НА LOCO.COM</a>
                 </div>
             </div>
@@ -129,18 +130,18 @@
                             </label>
                             <span class="quantity__more">+</span>
                         </div>
-                        <a class="look__link" href="#" title="Добавить в корзину">ДОБАВИТЬ В КОРЗИНУ</a>
+                        <a class="look__link button" href="#" title="Добавить в корзину">ДОБАВИТЬ В КОРЗИНУ</a>
                     </div>
                 </div>
             </div>
             <div class="look__path">
-                <a class="look__path-link" href="#" title="Посмотреть другие предложения">ДРУГИЕ ТОВАРЫ НА LOCO.COM</a>
+                <a class="look__link link" href="#" title="Посмотреть другие предложения">ДРУГИЕ ТОВАРЫ НА LOCO.COM</a>
             </div>
         </div>
 
         <footer class="look__created">
             <p class="look__created-txt">РАЗРАБОТАНО В</p>
-            <img class="look__created-img" src="#" alt="by">
+            <img class="look__created-img" src="images/logo-whs.png" alt="by">
         </footer>
     </section>
 </main>
