--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
 <header class="header">
     <div class="header__logo-wrap">
         <a class="header__logo-link" href="#">
-              <img src="images/logo.svg">
+            <picture class="header__logo-pic">
+                <source media="(min-width: 992px)" srcset="images/logo.svg">
+                <img src="images/logo-mobile.svg" alt="LOCO logo">
+            </picture>
         </a>
+
+
         <div class="header__lang">
             <a class="header__lang-ru">RU</a>
         </div>
@@ -119,7 +124,7 @@
             <div class="look__container">
                 <div class="look__wrap-text">
                     <h2 class="look__title">Serene Total Look</h2>
-                    <h3 class="look__subtitle">ОСЕННЯЯ КОЛЛЕКЦИЯ</h3>
+                    <h3 class="look__subtitle subtitle">ОСЕННЯЯ КОЛЛЕКЦИЯ</h3>
                     <p class="look__description">Джинсы, свитер, обувь.
                         <br>В комплект также входит пакет ароматного <br>чая и кружка.</p>
                     <div class="look__cart-form">
